<resources>
    <string name="bundle_uid">uid</string>
    <string name="bundle_cid">cid</string>
    <string name="bundle_community">community</string>
    <string name="bundle_match">msg_match</string>
    <string name="app_name">Findem</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="match_finding_community_name">Community Name</string>
    <string name="match_finding_name">John Doe</string>
    <string name="match_finding_bio">I am very cool doe bro</string>
    <string name="match_finding_meh">meh</string>
    <string name="match_finding_foundem">found em!</string>
    <string name="community_my_profile">My Profile</string>
    <string name="community_com_description">This community is about…</string>
    <string name="community_com_matches">Community Matches</string>
    <string name="community_find_people">Find some more people?</string>
    <string name="opening_findem">FINDEM</string>
    <string name="opening_find_community">Find a community.</string>
    <string name="opening_match">Match with people like you.</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="add_a_picture_signup">Add a picture!</string>
    <string name="home_trending_communities">Trending Communities</string>
    <string name="home_your_communities">Your Communities</string>
    <string name="home_find_your_new_crowd">Find your new crowd.</string>
    <string name="home_create_community">Create Community</string>
    <string name="home_search_communities">Search Communities</string>
    <string name="signup_find_your_new_crowd">Find your new crowd.</string>
    <string name="sign_up">Sign Up</string>
    <string name="signup_confirm_password">Confirm Password</string>
    <string name="signup_password">Password</string>
    <string name="signup_username">Username</string>
    <string name="signup_last_name">Last</string>
    <string name="signup_first_name">First</string>
    <string name="signup_full_name">Full Name</string>
    <string name="title_messages">Messages</string>
    <string name="title_settings">Settings</string>
    <string name="community_name_placeholder">Community Name</string>
    <string name="create_community">Create\nCommunity!</string>
    <string name="san_luis_obispo">San Luis Obispo</string>
    <string name="filter">Filter</string>
    <string name="community_description_placeholder">Community Description (255 character limit)</string>
    <string name="profile_description_placeholder">Profile Description (255 character limit)</string>
    <string name="add_picture">Add a picture!</string>
    <string name="let_world_find_you">Let the world find you.</string>
    <string name="add_tags">Add tags</string>
    <string name="search">Search</string>
    <string name="age">Age</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="opening_sign_up">Sign Up</string>
    <string name="opening_login">Login</string>
    <string name="under_development_chat">Under Development</string>
</resources>
