<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:src="@drawable/profile_pic"
            app:civ_border_width="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/description"
            style="@style/EditText"
            android:layout_width="0dp"
            android:layout_height="153dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/profile_description_placeholder"
            android:inputType="textMultiLine|textPersonName"
            android:padding="10dp"
            android:singleLine="false"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="@+id/age_field_ep3"
            app:layout_constraintStart_toStartOf="@+id/age_field_ep"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/age_ep"
            style="@style/TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:drawableEnd="@drawable/ic_edit_scaled"
            android:drawablePadding="8dp"
            android:text="@string/age"
            app:layout_constraintStart_toStartOf="@+id/first_name_ep2"
            app:layout_constraintTop_toBottomOf="@+id/first_name_field_ep2" />

        <TextView
            android:id="@+id/location_ep"
            style="@style/TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:drawableEnd="@drawable/ic_edit_scaled"
            android:drawablePadding="8dp"
            android:text="@string/location"
            app:layout_constraintStart_toStartOf="@+id/last_name_field"
            app:layout_constraintTop_toTopOf="@+id/age_ep" />

        <TextView
            android:id="@+id/first_name_ep2"
            style="@style/TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="15dp"
            android:drawableEnd="@drawable/ic_edit_scaled"
            android:drawablePadding="8dp"
            android:text="@string/signup_full_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_image" />

        <EditText
            android:id="@+id/last_name_field"
            style="@style/EditText"
            android:layout_width="0dp"
            android:layout_height="19dp"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            android:text="@string/let_world_find_you"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/first_name_field_ep2"
            app:layout_constraintTop_toTopOf="@+id/first_name_field_ep2" />

        <EditText
            android:id="@+id/age_field_ep"
            style="@style/EditText"
            android:layout_width="0dp"
            android:layout_height="17dp"
            android:layout_marginTop="10dp"
            android:text="@string/let_world_find_you"
            app:layout_constraintEnd_toEndOf="@+id/first_name_field_ep2"
            app:layout_constraintStart_toStartOf="@+id/first_name_field_ep2"
            app:layout_constraintTop_toBottomOf="@+id/age_ep" />

        <EditText
            android:id="@+id/age_field_ep3"
            style="@style/EditText"
            android:layout_width="0dp"
            android:layout_height="14dp"
            android:layout_marginTop="10dp"
            android:text="@string/let_world_find_you"
            app:layout_constraintEnd_toEndOf="@+id/last_name_field"
            app:layout_constraintStart_toStartOf="@+id/last_name_field"
            app:layout_constraintTop_toBottomOf="@+id/location_ep" />

        <EditText
            android:id="@+id/first_name_field_ep2"
            style="@style/EditText"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/let_world_find_you"
            app:layout_constraintEnd_toStartOf="@+id/last_name_field"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/first_name_ep2"
            app:layout_constraintTop_toBottomOf="@+id/first_name_ep2" />

        <android.support.design.button.MaterialButton
            android:id="@+id/save_changes"
            style="@style/TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="5dp"
            android:text="Save Changes"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/discard_changes"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description"
            app:strokeColor="@color/textColor"
            app:strokeWidth="2dp" />

        <android.support.design.button.MaterialButton
            android:id="@+id/discard_changes"
            style="@style/TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:text="Discard Changes"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="@+id/save_changes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/save_changes"
            app:layout_constraintTop_toTopOf="@+id/save_changes"
            app:strokeColor="@color/textColor"
            app:strokeWidth="2dp" />

        <TextView
            android:id="@+id/textView"
            style="@style/TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:drawableEnd="@drawable/ic_edit_scaled"
            android:drawableRight="@drawable/ic_edit_scaled"
            android:drawablePadding="8dp"
            android:text="@string/description"
            app:layout_constraintStart_toStartOf="@+id/age_field_ep"
            app:layout_constraintTop_toBottomOf="@+id/age_field_ep" />
    </android.support.constraint.ConstraintLayout>

</ScrollView>